force-app/main/default/objects/Test__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <label>Currency</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>