force-app/main/default/objects/Test__c/fields/Distance_Condition_Formula__c.field-meta.xml
<CustomField>
    <fullName>Distance_Condition_Formula__c</fullName>
    <formula>IF(DISTANCE( Home__c ,  Office__c , &apos;mi&apos;)&lt;10, &quot;near&quot;, &quot;far&quot;)</formula>
    <label>Distance Condition Formula</label>
    <type>Text</type>
</CustomField>