force-app/main/default/objects/Test__c/fields/Distance_Formula__c.field-meta.xml
<CustomField>
    <fullName>Distance_Formula__c</fullName>
    <formula>DISTANCE( Home__c ,  Office__c , &apos;mi&apos;)</formula>
    <label>Distance Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>