force-app/main/default/objects/Test__c/fields/Fomula_case_safe_id__c.field-meta.xml
<CustomField>
    <fullName>Fomula_case_safe_id__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>Fomula case safe id</label>
    <type>Text</type>
</CustomField>