force-app/main/default/objects/Test__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <formula>CEILING(  Percent__c  )</formula>
    <label>Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>