force-app/main/default/objects/Test__c/fields/Formula_BEGINS__c.field-meta.xml
<CustomField>
    <fullName>Formula_BEGINS__c</fullName>
    <formula>IF( BEGINS( Text__c , &quot;Testing&quot;), &quot;Under Testing&quot;, &quot;Development&quot; )</formula>
    <label>Formula BEGINS</label>
    <type>Text</type>
</CustomField>