force-app/main/default/objects/Test__c/fields/Formula_Case__c.field-meta.xml
<CustomField>
    <fullName>Formula_Case__c</fullName>
    <formula>CASE( Numb__c , 1, &quot;HI&quot;, 2, &quot;HELLO&quot;, 3, &quot;BYE&quot;, &quot;NOTHING&quot;)</formula>
    <label>Formula Case</label>
    <type>Text</type>
</CustomField>