force-app/main/default/objects/Test__c/fields/Formula_CONTAINS__c.field-meta.xml
<CustomField>
    <fullName>Formula_CONTAINS__c</fullName>
    <formula>IF( CONTAINS( Text__c , &quot;test&quot;), &quot;Contains&quot;, &quot;Not Contains&quot;)</formula>
    <label>Formula CONTAINS</label>
    <type>Text</type>
</CustomField>