force-app/main/default/objects/Test__c/fields/Formula_Find__c.field-meta.xml
<CustomField>
    <fullName>Formula_Find__c</fullName>
    <formula>FIND(&quot;in&quot;, Text__c ,26)</formula>
    <label>Formula Find</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>