force-app/main/default/objects/Test__c/fields/Formula_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Formula_Hyperlink__c</fullName>
    <formula>HYPERLINK( URL__c , &quot;Position Tab&quot;, &apos;_blank&apos;)</formula>
    <label>Formula Hyperlink</label>
    <type>Text</type>
</CustomField>