force-app/main/default/objects/Test__c/fields/Formula_Inculeds__c.field-meta.xml
<CustomField>
    <fullName>Formula_Inculeds__c</fullName>
    <formula>INCLUDES(  Multiselect__c  , &quot;Tester&quot;)</formula>
    <label>Formula Inculeds</label>
    <type>Checkbox</type>
</CustomField>