force-app/main/default/objects/Test__c/fields/Formula_Left__c.field-meta.xml
<CustomField>
    <fullName>Formula_Left__c</fullName>
    <formula>LEFT( Text__c , 5) &amp; &quot;-&quot;  &amp;  RIGHT( Text__c , 5)</formula>
    <label>Formula Left</label>
    <type>Text</type>
</CustomField>