force-app/main/default/objects/Test__c/fields/Formula_LEN__c.field-meta.xml
<CustomField>
    <fullName>Formula_LEN__c</fullName>
    <formula>LEN( Text__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula LEN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>