force-app/main/default/objects/Test__c/fields/Formula_LN__c.field-meta.xml
<CustomField>
    <fullName>Formula_LN__c</fullName>
    <formula>LN( Number__c )</formula>
    <label>Formula LN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>