force-app/main/default/objects/Test__c/fields/Formula_LOG__c.field-meta.xml
<CustomField>
    <fullName>Formula_LOG__c</fullName>
    <formula>LOG( Number__c )</formula>
    <label>Formula LOG</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>