force-app/main/default/objects/Test__c/fields/Formula_Lower__c.field-meta.xml
<CustomField>
    <fullName>Formula_Lower__c</fullName>
    <formula>LOWER( Text__c )</formula>
    <label>Formula Lower</label>
    <type>Text</type>
</CustomField>