force-app/main/default/objects/Test__c/fields/Formula_LPAD__c.field-meta.xml
<CustomField>
    <fullName>Formula_LPAD__c</fullName>
    <formula>LPAD( Text__c , 15,&apos;z&apos;)</formula>
    <label>Formula LPAD</label>
    <type>Text</type>
</CustomField>