force-app/main/default/objects/Test__c/fields/Formula_MAX__c.field-meta.xml
<CustomField>
    <fullName>Formula_MAX__c</fullName>
    <formula>MAX( Number__c  * 10 ,   Numb__c )</formula>
    <label>Formula MAX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>