force-app/main/default/objects/Test__c/fields/Formula_MID__c.field-meta.xml
<CustomField>
    <fullName>Formula_MID__c</fullName>
    <formula>MID( Text__c , 5, 6)</formula>
    <label>Formula MID</label>
    <type>Text</type>
</CustomField>