force-app/main/default/objects/Test__c/fields/Formula_MIN__c.field-meta.xml
<CustomField>
    <fullName>Formula_MIN__c</fullName>
    <formula>MIN( Number__c,  Numb__c  )</formula>
    <label>Formula MIN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>