force-app/main/default/objects/Test__c/fields/formula_number__c.field-meta.xml
<CustomField>
    <fullName>formula_number__c</fullName>
    <formula>CEILING( Number__c )</formula>
    <label>formula number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>