force-app/main/default/objects/Test__c/fields/Formula_Substitute__c.field-meta.xml
<CustomField>
    <fullName>Formula_Substitute__c</fullName>
    <formula>SUBSTITUTE( Email__c , LEFT( Email__c ,  FIND( &quot;@&quot; ,  Email__c ) ), &quot;www.&quot; )</formula>
    <label>Formula Substitute</label>
    <type>Text</type>
</CustomField>