force-app/main/default/objects/Test__c/fields/Formula_Text__c.field-meta.xml
<CustomField>
    <fullName>Formula_Text__c</fullName>
    <formula>Text__c   &amp; &quot;-&quot; &amp;  TEXT(  Picklist__c  )</formula>
    <label>Formula Text</label>
    <type>Text</type>
</CustomField>