force-app/main/default/objects/Test__c/fields/Formula_Trim__c.field-meta.xml
<CustomField>
    <fullName>Formula_Trim__c</fullName>
    <formula>TRIM( LEFT( Text__c , 5)  &amp; &quot;-&quot;  &amp;  RIGHT( Text_Area__c , 3) )</formula>
    <label>Formula Trim</label>
    <type>Text</type>
</CustomField>