force-app/main/default/objects/Test__c/fields/Formula_Upper__c.field-meta.xml
<CustomField>
    <fullName>Formula_Upper__c</fullName>
    <formula>UPPER( Text__c )</formula>
    <label>Formula Upper</label>
    <type>Text</type>
</CustomField>