force-app/main/default/objects/Test__c/fields/Fornula_Value__c.field-meta.xml
<CustomField>
    <fullName>Fornula_Value__c</fullName>
    <formula>VALUE( Text__c )</formula>
    <label>Fornula Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>