force-app/main/default/objects/Test__c/fields/Home__c.field-meta.xml
<CustomField>
    <fullName>Home__c</fullName>
    <label>Home</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>