force-app/main/default/objects/Test__c/fields/Multiselect__c.field-meta.xml
<CustomField>
    <fullName>Multiselect__c</fullName>
    <label>Multiselect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
                <default>true</default>
                <label>Developer</label>
            </value>
            <value>
                <fullName>Tester</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>