force-app/main/default/objects/Test__c/fields/Numb__c.field-meta.xml
<CustomField>
    <fullName>Numb__c</fullName>
    <label>Numb</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>