force-app/main/default/objects/Test__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>