force-app/main/default/objects/Test__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abc</fullName>
            </value>
            <value>
                <fullName>Pqr</fullName>
            </value>
            <value>
                <fullName>Xyz</fullName>
            </value>
            <value>
                <fullName>Lmn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>