force-app/main/default/objects/Test__c/fields/Root_Formula__c.field-meta.xml
<CustomField>
    <fullName>Root_Formula__c</fullName>
    <formula>SQRT( Number__c )</formula>
    <label>Root Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>