force-app/main/default/objects/Test__c/fields/Round_Formula__c.field-meta.xml
<CustomField>
    <fullName>Round_Formula__c</fullName>
    <formula>ROUND( Number__c  *  Numb__c,3 )</formula>
    <label>Round Formula</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>