force-app/main/default/objects/Test__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text</label>
    <type>TextArea</type>
</CustomField>