force-app/main/default/objects/Test__c/fields/Text_Long__c.field-meta.xml
<CustomField>
    <fullName>Text_Long__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Text Long</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>