force-app/main/default/objects/Test__c/validationRules/BEGINS.validationRule-meta.xml
<ValidationRule>
    <fullName>BEGINS</fullName>
    <active>true</active>
    <errorConditionFormula>BEGINS( Text__c , &quot;Development&quot;)</errorConditionFormula>
    <errorDisplayField>Text__c</errorDisplayField>
    <errorMessage>Enter correct data</errorMessage>
</ValidationRule>