force-app/main/default/objects/Test__c/validationRules/Pariorvalue.validationRule-meta.xml
<ValidationRule>
    <fullName>Pariorvalue</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(
 PRIORVALUE ( Multiselect__c ), &quot;test&quot; 
)</errorConditionFormula>
    <errorDisplayField>Multiselect__c</errorDisplayField>
    <errorMessage>Already Exist</errorMessage>
</ValidationRule>