force-app/main/default/objects/Test__c/validationRules/Regex.validationRule-meta.xml
<ValidationRule>
    <fullName>Regex</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
 OR(
  LEN(SSN__c )=0,
 REGEX(SSN__c , &quot;[0-9]{3}-[0-9]{2}-[0-9]{4}&quot;) 
)
)</errorConditionFormula>
    <errorDisplayField>SSN__c</errorDisplayField>
    <errorMessage>Enter valid SSN number</errorMessage>
</ValidationRule>