force-app/main/default/objects/Test__c/validationRules/Test.validationRule-meta.xml
<ValidationRule>
    <fullName>Test</fullName>
    <active>true</active>
    <errorConditionFormula>CASE( MOD( Date__c  -  DATE(2015,01,04), 7 ),
0,0,
6,0,
1 )= 0</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Date is not a Weekday.</errorMessage>
</ValidationRule>