force-app/main/default/objects/Test__c/validationRules/TEXT.validationRule-meta.xml
<ValidationRule>
    <fullName>TEXT</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( TEXT( Picklist__c ) , &quot;Abc&quot;)</errorConditionFormula>
    <errorDisplayField>Picklist__c</errorDisplayField>
    <errorMessage>Picklist values is wrong</errorMessage>
</ValidationRule>